build(gh-pages): add master branch to push event trigger
Extend the GitHub Actions workflow for gh-pages to also trigger on pushes
to the master branch in addition to changes to README.md. This ensures that
the documentation is updated automatically whenever changes are made to the
master branch.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,8 +1,10 @@
 name: gh-pages
 on:
   push:
+    branches:
+      - master
     paths:
-      - '**.md'  
+      - 'README.md'  
   workflow_dispatch:
         
 jobs:
